Bug 2044254 -  Prefetch A and AAAA separately so Happy Eyeballs reuses the speculative DNS lookup, r=mxinden

Differential Revision: https://phabricator.services.mozilla.com/D304713